fix map presentation on mobile devices

--- a/src/components/DotaMap/DotaMapItem.module.css
+++ b/src/components/DotaMap/DotaMapItem.module.css
@@ -6,26 +6,8 @@
   position: relative;
 }
 
-.label {
-  position: absolute;
-}
-
-.labelTop {
-  top: -100%;
-  left: 0;
-}
-
-.labelBottom {
-  top: 100%;
-  left: 0;
-}
-
-.labelLeft {
-  left: -100%;
-  top: 0;
-}
-
-.labelRight {
-  left: 100%;
-  top: 0;
+@media (max-width: 600px) {
+  .label {
+    font-weight: normal;
+  }
 }
