--- a/src/components/DotaMap/DotaMapItemArrow.module.css
+++ b/src/components/DotaMap/DotaMapItemArrow.module.css
@@ -5,3 +5,9 @@
   bottom: 50%;
   left: 50%;
 }
+
+@media (max-width: 600px) {
+  .arrow {
+    font-size: 1.5em;
+  }
+}
