--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,25 @@ main {
     1px 1px 0 #000;
 }
 
+@media (max-width: 600px) {
+  .tippy-tooltip,
+  .tippy-tooltip[data-animatefill],
+  .tippy-tooltip [x-circle] {
+    font-size: 0.4em;
+    font-weight: normal;
+  }
+}
+
 .fas {
   -webkit-text-stroke: 1.5px #000;
+}
+
+* {
+  font-size: 18px;
+}
+
+@media (max-width: 600px) {
+  * {
+    font-size: 14px;
+  }
 }
